# geolens

./: .dockerignore  .env.demo  .env.demo.example  .env.example  .env.test.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trivyignore.yaml  AGENTS.md  ARCHITECTURE.md  BRANDING-VERSION  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EDITIONS.md  EGRESS.md  FEATURES.md  GOVERNANCE.md  LICENSE  LICENSE-FAQ.md  MAINTAINERS.md  Makefile  NOTICE  PUBLIC-READINESS.md  README.de.md  README.es.md  README.fr.md  README.md  RELEASE.md  RUNBOOK.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_DATA.md  TRADEMARKS.md  UPGRADING.md  app_structure.txt  builder-snapshot.md  (+10 more)
backend/: .dockerignore  Dockerfile  alembic.ini  openapi.json  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_baseline.py  0001_foundations.py  0001_initial_schema.py  0002_add_table_record_type.py  0002_initial_tables.py  0002_procrastinate.py  0003_add_dataset_relationships.py  0003_normalize_dem_hillshade_style.py  0003_procrastinate.py  0003_workflow_status_extension.py  0004_add_maps_legend_title.py  0004_add_performance_indexes.py  0004_style_config_paint_cleanup.py  0005_dormant_tenancy.py  0005_map_terrain_config.py  0005_schema_fixes.py  0006_add_show_in_legend.py  0006_map_icon_assets.py  0006_tenant_rls.py  0007_add_user_last_login_at.py  0007_map_edit_history.py  0007_tenant_data_schemas.py  0008_normalize_outline_paint.py  0008_oauth_saml_columns.py  0008_refresh_tokens_expires_idx.py  0009_audit_logs_indexes.py  0009_email_verification.py  0009_update_basemap_default.py  0010_add_saml_provider_columns.py  0010_oauth_github_provider_type.py  0010_trgm_search_indexes.py  0011_allow_generic_geometry_type.py  0011_model_review_fixes.py  0011_record_embeddings_hnsw_idx.py  0012_dataset_tile_columns.py  0012_map_thumbnail_to_storage.py  0012_type_embedding_vector.py  0013_backfill_geoparquet_distributions.py  0013_partial_indexes_embed_tokens_ingest_jobs.py  0014_fk_covering_indexes.py  (+57 more)
backend/app/: config.py  database.py  dependencies.py  edition.py  logging_config.py  main.py  marketplace.py  persistent_config.py  public_urls.py  worker.py  worker_health.py
backend/app/admin/: router.py  schemas.py  service.py
backend/app/ai/: chat_service.py  constants.py  llm_loop.py  metadata_schemas.py  metadata_service.py  router.py  schemas.py  service.py  sql_generator.py  streaming.py  tool_call_parser.py  tools.py
backend/app/api/: __init__.py  main.py  router.py
backend/app/assets/: urls.py
backend/app/audit/: models.py  router.py  schemas.py  service.py
backend/app/auth/: dependencies.py  models.py  permissions.py  router.py  schemas.py  service.py  visibility.py
backend/app/cache/: __init__.py  memory.py  provider.py  redis.py  tile_cache.py  tiles.py
backend/app/collections/: models.py  router.py  schemas.py  service.py
backend/app/config_ops/: exceptions.py  router.py  schemas.py  service.py
backend/app/core/: __init__.py  ai_credentials.py  async_io.py  catalog_port.py  config.py  crs_uri.py  dependencies.py  edition.py  geo.py  identity.py  license.py  logging_config.py  marketplace.py  permissions.py  persistent_config.py  processing_port.py  public_urls.py  tenancy.py  text.py  url_redaction.py
backend/app/datasets/: column_stats.py  helpers.py  models.py  router.py  router_data.py  router_export.py  router_metadata.py  router_reupload.py  router_vrt.py  schemas.py  service.py  utils.py
backend/app/dcat/: service.py
backend/app/embed_tokens/: admin_router.py  models.py  router.py  schemas.py  service.py
backend/app/embeddings/: backfill.py  helpers.py  models.py  service.py  tasks.py
backend/app/export/: ogr.py  router.py  schemas.py  service.py
backend/app/extensions/: __init__.py  (+3 more)
backend/scripts/: README.md  api-entrypoint.sh  check_fe_type_drift.py  dump_openapi.py  generate_vector_quicklooks.py  license_tool.py  prepare-tenant-rls.py  probe_overlay_resolution.py  reconcile_quicklook_uris.py  refactor_migrate.py  seed_stac_ci.py  seed_tiles.py  test_alembic_upgrade_clean_db.sh  verify_overlay_migrations.py  worker-entrypoint.sh
backend/tests/: conftest.py  factories.py  repo_paths.py  rls_snapshot.json  tenant_insert_stamping_snapshot.json  test_1181_config_correctness.py  test_1183_s3_spool_upload.py  test_1184_backup_schedule_validation.py  test_1184_body_limit_per_route.py  test_1224_ingest_quota_enforcement.py  test_1224_quota_service.py  test_302_quota_reservation.py  test_access_log_path_redaction.py  test_admin_ai_probe.py  test_admin_create_user_failfast.py  test_admin_identity_migration.py  test_admin_invariants_regression.py  test_admin_jobs_ilike_escape.py  test_admin_jobs_retry_capability.py  test_admin_lifecycle_hardening.py  test_admin_rate_limit.py  test_admin_stats.py  test_admin_user_export.py  test_admin_user_operations.py  test_advanced_sharing_schema.py  test_ai_chat.py  test_ai_chat_actions_phase1135.py  test_ai_chat_dataset.py  test_ai_credential_binding.py  test_ai_map_spec_repair.py  test_ai_metadata.py  test_ai_metadata_authz_1173.py  test_ai_provider_extension.py  test_ai_send_sample_values.py  test_ai_style_validation.py  test_ai_token_budget_daily.py  test_ai_token_budget_perf009.py  test_allowed_email_domains_settings.py  test_analysis_materialize.py  test_analysis_preview.py  (+409 more)
cli/: .gitignore  LICENSE  README.md  pyproject.toml
cli/geolens_cli/: __init__.py  _sdk_helpers.py  auth.py  config.py  export_stac.py  main.py  manifest_apply.py  output.py  publish.py  scan.py
cli/tests/: conftest.py  test_active_instance.py  test_auth_keyring.py  test_config.py  test_exit_codes.py  test_export_stac.py  test_logout.py  test_manifest_apply.py  test_manifest_cli_offline.py  test_manifest_examples.py  test_manifest_init.py  test_manifest_schema.py  test_manifest_validate.py  test_output.py  test_publish_unit.py  test_scan.py  test_sdk_docs_api_prefix.py  test_version.py
mcp/: README.md  pyproject.toml
mcp/geolens_mcp/: __init__.py  client.py  server.py
mcp/tests/: test_client.py
(+5329 files in other folders)
