[project]
name = "geolens"
version = "1.0.0"
description = "PostGIS-native GIS data catalog"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "geoalchemy2>=0.15.0",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.12.0",
    "pwdlib[bcrypt]>=0.3.0",
    "procrastinate>=3.0.0",
    "psycopg[binary]>=3.1.0",
    "shapely>=2.0",
    "pygeofilter[backend-sqlalchemy]>=0.3.3",
    "structlog>=25.4.0",
    "anthropic>=0.87.0",
    "openai>=2.0.0",
    "pgvector>=0.4.2",
    "defusedxml>=0.7.1",
    "python-slugify>=8.0.4",
    "slowapi>=0.1.9",
    "boto3>=1.35.0",
    "redis>=5.0.0",
    "puremagic>=2.0.0",
    "rasterio>=1.4.0",
    "Pillow>=12.1.1",
    "numpy>=2.0.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "authlib>=1.6.9",
    "itsdangerous>=2.2.0",
    "sse-starlette>=3.3.2",
    "sqlglot>=29.0.0",
    # Security: pin transitive deps to versions without known CVEs
    # cryptography 46.0.7 patches a buffer-overflow bug affecting
    # non-contiguous buffers passed to certain APIs (Dependabot #29).
    "cryptography>=46.0.7",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "jsonschema>=4.19",
    "pytest-cov",
    "bandit>=1.8",
    "pip-audit>=2.7",
    "moto[s3]>=5.0.0",
    "fakeredis>=2.21.0",
    "pystac>=1.14",
]

[tool.pytest.ini_options]
# Let AnyIO own the project’s coroutine tests and plain async fixtures. Keep
# pytest-asyncio strict so it only handles the explicit asyncio-only unit-test
# slice and does not hijack DB-backed integration fixtures onto a second runner.
anyio_mode = "auto"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-m 'not perf'"
markers = [
    "perf: performance regression tests (deselected by default)",
    "requires_ogr2ogr: tests that invoke ogr2ogr and need build_pg_conn_str redirected to the test database (K2-PRE; fixture lives in tests/conftest.py)",
]

[tool.coverage.run]
source = ["app"]
omit = []

[tool.coverage.report]
show_missing = true
fail_under = 58.5
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
