[project]
name = "geolens-backend"
version = "1.4.13"
description = "PostGIS-native GIS data catalog"
# Docker image (Dockerfile) ships python:3.14-slim (see the Dockerfile FROM for
# the exact patch pin) as the project's tested runtime.
# requires-python>=3.13 is the backward-compat floor for adopters
# running their own Python (CI matrix could expand to test 3.13.x — deferred
# to a future test-coverage milestone). Per INF-15.
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.29.0",
    "alembic>=1.18.5",
    "geoalchemy2>=0.20.0",
    "pydantic[email]>=2.13.4",
    # >=2.14.2: fixes GHSA-4xgf-cpjx-pc3j (pydantic-settings 2.14.1 advisory).
    # Do not lower this floor.
    "pydantic-settings>=2.14.2",
    # >=2.13.0: fixes PYSEC-2026-175/177/178/179 (PyJWKClient SSRF + unbounded
    # JWKS fetch, HMAC key-confusion, detached-JWS DoS). Do not lower this floor.
    "pyjwt>=2.13.0",
    "pwdlib[bcrypt]>=0.3.0",
    "procrastinate>=3.9.0",
    "psycopg>=3.3.4",
    "shapely>=2.0",
    "pygeofilter[backend-sqlalchemy]>=0.4.0",
    "structlog>=25.4.0",
    "anthropic>=0.117.0",
    "openai>=2.46.0,<3",
    "pgvector>=0.5.0",
    "defusedxml>=0.7.1",
    "python-slugify>=8.0.4",
    "slowapi>=0.1.10",
    "boto3>=1.43.51",
    # Azure Blob Storage provider (STOR-01 / Phase 1210). azure-identity is included
    # for managed-identity / account-URL auth paths (account_url + credential constructor).
    "azure-storage-blob>=12.24.0",
    "azure-identity>=1.20.0",
    # PERF-01 (Phase 274): in-memory LRU fallback for tile cache when REDIS_URL is unset
    "cachetools>=7.1.4",
    "redis>=7.4.1",
    "jsonschema>=4.19",
    "puremagic>=2.2.0",
    "rasterio>=1.4.0",
    "Pillow>=12.3.0",
    "numpy>=2.5.1",
    # 8.0.0 lifts the starlette<1.0.0 cap (prior 7.x pinned <1.0.0), which was
    # the sole blocker preventing starlette>=1.0.1 from resolving for the
    # CVE-2026-48710 fix below.
    "prometheus-fastapi-instrumentator>=8.0.2",
    "authlib>=1.7.1",  # CVE-2026-44681 (GHSA-r95x-qfjj-fjj2) — OIDC Implicit/Hybrid open redirect, fixed in 1.6.12 / 1.7.1
    "python-multipart>=0.0.27",
    # httpx: promoted from [dependency-groups].dev to prod (dep-audit 2026-06-02).
    # Imported directly by 12 production modules (catalog source adapters,
    # processing/ai/llm_loop.py, processing/tiles/router.py); previously resolved
    # only transitively via fastapi[standard]. Pin keeps it a first-class dep.
    "httpx>=0.27",
    "sse-starlette>=3.4.5",
    "sqlglot>=30.12.0",
    "itsdangerous>=2.2.0",
    # Security: pin transitive deps to versions without known CVEs
    # cryptography 46.0.7 patches a buffer-overflow bug affecting
    # non-contiguous buffers passed to certain APIs (Dependabot #29).
    "cryptography>=46.0.7",
    # urllib3 2.7.0 patches decompression-bomb bypasses in streaming reads
    # and drain_conn handling (Dependabot #36 / CVE-2026-44432).
    "urllib3>=2.7.0",
    # idna 3.15 patches a DoS in idna.encode() with crafted inputs (Dependabot #40 / CVE-2026-45409 / GHSA-65pc-fj4g-8rjx).
    "idna>=3.18",
    # starlette 1.0.1 fixes "BadHost": missing Host-header validation that
    # poisons request.url.path and can bypass path-based auth checks
    # (CVE-2026-48710 / PYSEC-2026-161 / GHSA-86qp-5c8j-p5mr). Requires
    # prometheus-fastapi-instrumentator>=8.0.0 above; FastAPI (>=0.46.0) and
    # sse-starlette (>=0.49.1) already permit starlette 1.x.
    "starlette>=1.2.1",
    # GeoParquet export writer (processing/export/parquet.py). The Debian GDAL
    # build has no Arrow/Parquet driver, so exports are written via pyarrow.
    "pyarrow>=18.0.0",
]

[project.urls]
Homepage = "https://github.com/geolens-io/geolens"
Repository = "https://github.com/geolens-io/geolens"
Documentation = "https://docs.getgeolens.com"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio",
    "pytest-xdist>=3.6.0",
    "ruff",
    "pytest-cov",
    "bandit>=1.8",
    "pip-audit>=2.10.1",
    "moto[s3]>=5.2.2",
    "fakeredis>=2.36.2",
    "pystac>=1.15.1",
]

[tool.ruff.lint]
# Ruff's defaults (E4/E7/E9/F) plus a cyclomatic-complexity gate. fix(#435): the
# audit found 33 functions above McCabe 15 with no configured gate — a line cap on a
# module does not stop one function accumulating branches, transaction boundaries,
# I/O, authorization, and serialization concerns.
select = ["E4", "E7", "E9", "F", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
# Burn-down baseline: every file that exceeded McCabe 15 when the gate went in.
# New code everywhere else is gated. This list may SHRINK, never grow — a new entry
# means a new over-complex function. Start with `raster_tile_proxy` (30),
# `_build_dataset_context` (35), and `_stream_openai_chat` (32): they combine the
# most failure domains. The standards serializers (dcat, dcat_us, geodcat_ap, stac,
# ogc) are compatibility mappings — churn-only rewrites there are not worth it.
"app/modules/auth/oauth/service.py" = ["C901"]
"app/modules/catalog/maps/filter_grammar.py" = ["C901"]
"app/modules/catalog/maps/service_diff.py" = ["C901"]
"app/modules/catalog/maps/sprites.py" = ["C901"]
"app/modules/catalog/maps/style_json.py" = ["C901"]
"app/modules/catalog/search/router.py" = ["C901"]
"app/modules/catalog/search/service_records.py" = ["C901"]
"app/modules/catalog/sources/router.py" = ["C901"]
"app/modules/embed_tokens/service.py" = ["C901"]
"app/platform/extensions/defaults.py" = ["C901"]
"app/processing/ai/chat_actions.py" = ["C901"]
"app/processing/ai/metadata_service.py" = ["C901"]
"app/processing/ai/service.py" = ["C901"]
"app/processing/ai/streaming.py" = ["C901"]
"app/processing/export/router.py" = ["C901"]
"app/processing/ingest/metadata.py" = ["C901"]
"app/processing/ingest/tasks_raster.py" = ["C901"]
"app/processing/ingest/tasks_vector.py" = ["C901"]
"app/processing/ingest/tasks_vrt.py" = ["C901"]
"app/processing/raster/quicklook.py" = ["C901"]
"app/processing/tiles/router.py" = ["C901"]
"app/standards/dcat/service.py" = ["C901"]
"app/standards/dcat_us/service.py" = ["C901"]
"app/standards/geodcat_ap/service.py" = ["C901"]
"app/standards/ogc/router.py" = ["C901"]
"app/standards/stac/router.py" = ["C901"]

[tool.pytest.ini_options]
# Let AnyIO own the project’s coroutine tests and plain async fixtures. Keep
# pytest-asyncio strict so it only handles the explicit asyncio-only unit-test
# slice and does not hijack DB-backed integration fixtures onto a second runner.
anyio_mode = "auto"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
# --dist loadgroup makes the @pytest.mark.xdist_group marker effective under
# pytest-xdist (default `load` scheduler ignores it). It co-locates the
# global-state-mutating tenancy tests on one worker (v1042 isolation fix). It is
# a no-op for serial runs (no -n) and behaves like `load` for ungrouped tests.
addopts = "-m 'not perf' --dist loadgroup"
markers = [
    "perf: performance regression tests (deselected by default)",
    "requires_ogr2ogr: tests that invoke ogr2ogr and need build_pg_conn_str redirected to the test database (K2-PRE; fixture lives in tests/conftest.py)",
    "architecture: layering and boundary tests; opt-out locally with `-m 'not architecture'` (Phase 212 LAYER-01 guard)",
    "lifecycle: edition deactivation/reactivation tests requiring enterprise overlay (Phase 220 LIFECYCLE-04)",
    "rls: tests that enable FORCE RLS on the shared test DB (Phase 1208-03); scoped enable→disable via multi_tenant_rls fixture",
    "live_stack: tests requiring the full cloud-dev Docker stack (titiler + azurite running together, reachable from inside the Docker network; skipped in default CI)",
    "xdist_group: pytest-xdist loadgroup marker; co-locates global-state-mutating tenancy tests on one worker (v1042 isolation fix)",
]

[tool.coverage.run]
source = ["app"]
omit = []

[tool.coverage.report]
show_missing = true
# Coverage threshold ratchets upward as the suite grows (TEST-01, Phase 278).
# Current: 80.0 (raised from 60 — the #561 -n4 run measured 85.49% actual; the
# old 58.5/60 floors were toothless against a 25 pt regression. 80 keeps a
# conservative ~5.5 pt buffer). To ratchet further: run `make test-cov`, take
# the lowest stable run's pct, subtract a 1-2 pt buffer, and bump this number.
# Never lower it without a documented rationale in CHANGELOG.
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
