[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geolens"
version = "1.0.0"
description = "Apache-2.0 command-line interface for the GeoLens API. Login, scan, publish, and export STAC against any GeoLens instance."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "GeoLens", email = "noreply@geolens.io" }]
keywords = ["geolens", "geospatial", "cli", "stac", "openapi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "typer>=0.25.0,<0.26.0",
  "rich>=14.0.0,<16.0.0",
  "keyring>=25.0.0,<26.0.0",
  "tomli_w>=1.0.0,<2.0.0",
  "platformdirs>=4.0.0,<5.0.0",
  "structlog>=25.0.0,<26.0.0",
  "geolens-sdk>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0,<10.0.0",
]

[project.scripts]
geolens = "geolens_cli.main:app"

[project.urls]
Homepage = "https://github.com/geolens-io/geolens"
Repository = "https://github.com/geolens-io/geolens"
Documentation = "https://github.com/geolens-io/geolens/blob/main/docs/cli.md"

[tool.hatch.build.targets.wheel]
packages = ["geolens_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
